[Fix] alignment and style fixes

--- a/css/index.css
+++ b/css/index.css
@@ -218,7 +218,7 @@ img {
   border-bottom: 2px dashed #C0C0C0;
 }
 .home .hero-section .hero-header {
-  margin: 30px 0 10px 0;
+  margin: 3% 0 1% 0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -272,5 +272,5 @@ img {
   background-color: #17A2B8;
   font-size: 2rem;
   color: #FFFFFF;
-  border-radius: 20px;
+  border-radius: 15px;
 }
