--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,7 +4,7 @@
     .borderBtm( 2px, @navigation-border);
 
     .hero-header{
-      margin: 30px 0 10px 0;
+      margin: 3% 0 1% 0;
     }
   }
 
@@ -67,7 +67,7 @@
 
       .btn{
         text-align: center;
-        .signupBtn(15px, @button-bg, @white, 2rem, 20px);
+        .signupBtn(15px, @button-bg, @white, 2rem, 15px);
       }
     }
   }
